--- a/inschool.html
+++ b/inschool.html
@@ -1389,7 +1389,7 @@
                           id="config-photo"
                           width="100%"
                           height="100%"
-                          src="touxiang.jpg"
+                          src="https://github.com/YourRaymond/campus/blob/main/touxiang.jpg?raw=true"
                         />
                       </div>
                     </div>
