--- a/inschool.html
+++ b/inschool.html
@@ -6,6 +6,7 @@
           * Update your information
           * Refresh
      -->
+  <meta name="referrer" content="no-referrer />
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta
