--- a/inschool.html
+++ b/inschool.html
@@ -1390,7 +1390,7 @@
                           id="config-photo"
                           width="100%"
                           height="100%"
-                          src="https://github.com/YourRaymond/campus/blob/main/touxiang.jpg?raw=true"
+                          src="https://img2018.cnblogs.com/common/1549846/201911/1549846-20191126114905934-1885609078.png"
                         />
                       </div>
                     </div>
